--- a/fd/public/locales/ch/translation.json
+++ b/fd/public/locales/ch/translation.json
@@ -157,5 +157,31 @@
     "autoLogin": "自動登入",
     "logtoShop": "登入商店",
     "forgetPW": "忘記密碼?",
-    "admin": "前往管理員登入"
+    "admin": "前往管理員登入",
+    "shopRecord": "購物記錄",
+    "customerName": "姓名",
+    "registerationDay": "注冊日期",
+    "check": "檢查紀錄",
+    "personalInfo": "個人資料",
+    "details": "資料細節",
+    "edit": "設定",
+    "loginDetail": "我的賬戶",
+    "updatePW": "改變密碼",
+    "gender": "性別",
+    "Phone": "電話號碼",
+    "logoutAll": "從所以設備中登出",
+    "text": "要再次訪問商店網站，您需要提供您的憑證。此操作將會讓您從之前使用過的任何其他網絡瀏覽器中登出。",
+    "text2": "你好！隨時可以編輯下面的任何詳情，以便您的帳戶保持最新。",
+    "logout": "登出",
+    "welcomeBack": "歡迎回來！祝您購物愉快！",
+    "overview": "個人資料概覽",
+    "hi": "你好",
+    "user": "使用者",
+    "orders": "賬單記錄",
+    "changePW": "重設密碼",
+    "newPW": "確認新密碼",
+    "cancel": "取消",
+    "updatePD": "更新個人資料詳細資料",
+    "updateProfile": "更新個人資料",
+    "upload": "上傳頭像"
 }
