--- a/fd/public/locales/eng/translation.json
+++ b/fd/public/locales/eng/translation.json
@@ -158,5 +158,31 @@
     "autoLogin": "Automatic login",
     "logtoShop": "Customer Log In",
     "forgetPW": "Forgot your password?",
-    "admin": "Administrator Log In"
+    "admin": "Administrator Log In",
+    "shopRecord": "Shopping History",
+    "customerName": "Name",
+    "registerationDay": "Member since",
+    "check": "Check Records",
+    "personalInfo": "Personal Information",
+    "details": "MY DETAILS",
+    "edit": "EDIT DETAILS",
+    "loginDetail": "LOGIN DETAILS",
+    "updatePW": "UPDATE PASSWORD",
+    "gender": "Gender",
+    "Phone": "Phone Number",
+    "logoutAll": "Log out from all devices",
+    "text": "To access the Store website again, you need to provide your credentials. This action will log you out from any other web browsers you have used before.",
+    "text2": "Hey there ! Feel free to edit any of your details below so your account is up to date.",
+    "logout": "Logout Account",
+    "welcomeBack": "Welcome back! Happy shopping!",
+    "overview": "Profile Overview",
+    "hi": "Hi",
+    "user": "User",
+    "orders": "Order",
+    "changePW": "Reset Password",
+    "newPW": "Confirm New Password",
+    "cancel": "Cancel",
+    "updatePD": "Update Profile Deatils",
+    "updateProfile": "Update Profile",
+    "upload": "Upload Avatar"
 }
