--- a/fd/public/locales/simch/translation.json
+++ b/fd/public/locales/simch/translation.json
@@ -157,5 +157,31 @@
     "autoLogin": "自动登录",
     "logtoShop": "登录商店",
     "forgetPW": "忘记密码?",
-    "admin": "前往管理员登录"
+    "admin": "前往管理员登录",
+    "shopRecord": "购物记录",
+    "customerName": "姓名",
+    "registerationDay": "注册日期",
+    "check": "检查纪录",
+    "personalInfo": "个人资料",
+    "details": "资料细节",
+    "edit": "设置",
+    "loginDetail": "我的账户",
+    "updatePW": "改变密码",
+    "gender": "性別",
+    "Phone": "电话号码",
+    "logoutAll": "从所以设备中登出",
+    "text": "要再次访问商店网站，您需要提供您的凭证。这个操作将会使您从之前使用过的任何其他网络浏览器中登出。",
+    "text2": "你好！请随意编辑下面的任何详细信息，以确保您的账户信息是最新的。",
+    "logout": "登出",
+    "welcomeBack": "欢迎回来！祝您购物愉快！",
+    "overview": "个人资料概览",
+    "hi": "你好",
+    "user": "使用者",
+    "orders": "账单记录",
+    "changePW": "重置密码",
+    "newPW": "确认新密码",
+    "cancel": "取消",
+    "updatePD": "更新个人资料详细信息",
+    "updateProfile": "更新个人资料",
+    "upload": "上传头像"
 }
